apps/00templates/template-deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pihole

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      hostNetwork: true
      containers:
        - name: pihole
          #image: pihole/pihole:latest
          image: pihole/pihole:2024.06.0
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          ports:
            - containerPort: 53
              protocol: TCP
            - containerPort: 53
              protocol: UDP
            - containerPort: 67
              protocol: UDP
            - containerPort: 80
              protocol: TCP
            - containerPort: 443
              protocol: TCP
          volumeMounts:
            - name: etc
              mountPath: /etc/pihole
            - name: dnsmasq
              mountPath: /etc/dnsmasq.d
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 2Gi
              cpu: 1
      volumes:
        - name: etc
          hostPath:
            path: /data/pihole/etc
            type: Directory
        - name: dnsmasq
          hostPath:
            path: /data/pihole/dnsmasq.d
            type: Directory
