apps/00templates/test-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  namespace: test
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
