apps/00templates/template-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
spec:
  ports:
  #- port: 80
  - port: 8888
    targetPort: 80
    #nodePort: 31001
    protocol: TCP
    name: pihole-admin
  - port: 53
    targetPort: 53
    #nodePort: 31002
    protocol: TCP
    name: dns-tcp
  - port: 53
    targetPort: 53
    #nodePort: 31003
    protocol: UDP
    name: dns-udp
  selector:
    app: pihole
  #type: LoadBalancer
  type: ClusterIP
  #type: NodePort
  #externalTrafficPolicy: Local
  #externalTrafficPolicy: Cluster
