apps/00templates/template-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: test-ca-cluster-issuer

spec:
  ingressClassName: nginx
  tls:
    - secretName: nginx-server-tls
      hosts:
        - nginx.pauljsolomon.net
  rules:
    - host: nginx.pauljsolomon.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
